Developing: Fix bug with text overflowing

--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -28,7 +28,7 @@
 }
 
 .card__name {
-  height: 24px;
+  min-height: 24px;
   background-color: #fff;
   display: flex;
   align-items: center;
